[metadata]
name = python-lin
version = attr: lin.__version__
author = Python-LIN Contributors
author_email = 
description = Python LIN (Local Interconnect Network) interface supporting Vector hardware
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/python-lin
project_urls = 
    Bug Tracker = https://github.com/yourusername/python-lin/issues
    Documentation = https://github.com/yourusername/python-lin/wiki
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: System :: Networking
keywords = 
    LIN
    Local Interconnect Network
    Vector
    automotive
    bus
    CAN

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    python-can>=4.0.0
    typing_extensions>=3.10.0
    
[options.extras_require]
test = 
    pytest>=6.0
    pytest-timeout
    pytest-cov
dev = 
    black
    mypy
    ruff
    build
doc = 
    sphinx
    sphinx-rtd-theme

[options.package_data]
lin = py.typed

[options.entry_points]
# 如果需要注册到python-can的接口系统
# can.interface = 
#     lin_vector = lin.interfaces.vector:VectorLinBus